--- a/Front-end/src/Components/Chat/SettingUser/SettingUser.css
+++ b/Front-end/src/Components/Chat/SettingUser/SettingUser.css
@@ -15,8 +15,27 @@
    
 }
 
+
+.settingButtons {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.setting {
+    height: 20%;
+    font-size: 1rem;
+}
+
+.setting:hover {
+    opacity: 0.8;
+}
+
 .buttonToBlock{
-    height: 17%;
     width: 60%;
     cursor: pointer;
     outline: none;
@@ -27,30 +46,27 @@
 }
 
 .buttonProfile {
+    font-size: 0.9rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: black;
-    height: 20%;
     width: 60%;
     outline: none;
     border: none;
     border-radius: 5px;
-    margin-bottom: 3%;
     cursor: pointer;
     text-decoration: none;
     background-color: white;
     opacity: 0.9;
-    font-size: 0.8rem;
 }
 
 .buttonPlay{
-    height: 17%;
     width: 60%;
     outline: none;
     border: none;
     border-radius: 5px;
-    margin-bottom: 1%;
+    background-color: white;
     cursor: pointer;
 }
 
@@ -59,7 +75,6 @@
 }
 
 .buttonBlocked {
-    height: 20%;
     width: 60%;
     cursor: not-allowed;
     outline: none;
