--- a/Front-end/src/Components/Game/SettingGame/SettingGame.css
+++ b/Front-end/src/Components/Game/SettingGame/SettingGame.css
@@ -80,6 +80,17 @@
     cursor: pointer;
 }
 
+.gameBonus {
+    height: 100%;
+    width: 50%;
+    cursor: pointer;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+
 .invitationButtonDecline {
     background-color: #ff5a5a;
     color: white;
@@ -268,6 +279,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 .buttonMap:active{
